--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -1800,33 +1800,33 @@ button:hover {
   border: 1px solid #8a6d3b;
 }
 
-/* line 1766, ../sass/screen.scss */
+/* line 1765, ../sass/screen.scss */
 #message-chat {
   height: 350px;
   overflow-y: auto;
   border-right: 1px solid;
 }
 
-/* line 1772, ../sass/screen.scss */
+/* line 1771, ../sass/screen.scss */
 .chat-container {
   flex-direction: column;
   display: flex;
   width: 100%;
 }
 @media (min-width: 800px) {
-  /* line 1772, ../sass/screen.scss */
+  /* line 1771, ../sass/screen.scss */
   .chat-container {
     width: 80%;
   }
 }
 
-/* line 1780, ../sass/screen.scss */
+/* line 1779, ../sass/screen.scss */
 .chat-container-login, .contacto-container-controls {
   flex-direction: row;
   display: flex;
 }
 
-/* line 1784, ../sass/screen.scss */
+/* line 1783, ../sass/screen.scss */
 .btn-chat {
   display: flex;
   flex-direction: column;
@@ -1836,19 +1836,19 @@ button:hover {
   font-family: 'Oswald', sans-serif;
 }
 @media (min-width: 800px) {
-  /* line 1784, ../sass/screen.scss */
+  /* line 1783, ../sass/screen.scss */
   .btn-chat {
     align-items: flex-end;
   }
 }
 
-/* line 1795, ../sass/screen.scss */
+/* line 1794, ../sass/screen.scss */
 #texto-mensaje {
   margin-right: 10px;
   margin-top: 15px;
 }
 @media (min-width: 800px) {
-  /* line 1795, ../sass/screen.scss */
+  /* line 1794, ../sass/screen.scss */
   #texto-mensaje {
     width: 60%;
     margin-left: 25%;
@@ -1856,34 +1856,34 @@ button:hover {
   }
 }
 
-/* line 1806, ../sass/screen.scss */
+/* line 1805, ../sass/screen.scss */
 .arrow-contacto-margin {
   margin-right: 0;
 }
 @media (min-width: 800px) {
-  /* line 1806, ../sass/screen.scss */
+  /* line 1805, ../sass/screen.scss */
   .arrow-contacto-margin {
     margin-right: 8px;
   }
 }
 
-/* line 1812, ../sass/screen.scss */
+/* line 1811, ../sass/screen.scss */
 .arrow-chat-margin {
   margin-right: 0;
 }
 @media (min-width: 800px) {
-  /* line 1812, ../sass/screen.scss */
+  /* line 1811, ../sass/screen.scss */
   .arrow-chat-margin {
     margin-right: 15px;
   }
 }
 
-/* line 1818, ../sass/screen.scss */
+/* line 1817, ../sass/screen.scss */
 .controls-margin {
   margin-top: 20px;
 }
 
-/* line 1821, ../sass/screen.scss */
+/* line 1820, ../sass/screen.scss */
 .error-message {
   font-size: 12px;
   position: absolute;
@@ -1894,7 +1894,7 @@ button:hover {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.16), 0 2px 10px rgba(0, 0, 0, 0.12);
 }
 
-/* line 1831, ../sass/screen.scss */
+/* line 1830, ../sass/screen.scss */
 .container-color-1 {
   background: rgba(255, 93, 177, 0.56);
   background: -moz-linear-gradient(top, rgba(255, 93, 177, 0.56) 0%, rgba(245, 37, 145, 0.77) 61%, rgba(239, 1, 124, 0.77) 100%);
@@ -1906,7 +1906,7 @@ button:hover {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff5db1', endColorstr='#ef017c', GradientType=0 );
 }
 
-/* line 1841, ../sass/screen.scss */
+/* line 1840, ../sass/screen.scss */
 .container-color-2 {
   background: #f1e767;
   background: -moz-linear-gradient(top, #f1e767 0%, #fbe083 100%);
@@ -1918,7 +1918,7 @@ button:hover {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f1e767', endColorstr='#fbe083', GradientType=0 );
 }
 
-/* line 1851, ../sass/screen.scss */
+/* line 1850, ../sass/screen.scss */
 .container-color-3 {
   background-image: -webkit-linear-gradient(top, #dff0d8 0, #c8e5bc 100%);
   background-image: -o-linear-gradient(top, #dff0d8 0, #c8e5bc 100%);
@@ -1928,7 +1928,7 @@ button:hover {
   background-repeat: repeat-x;
 }
 
-/* line 1859, ../sass/screen.scss */
+/* line 1858, ../sass/screen.scss */
 .container-color-4 {
   background: white;
   background: -moz-linear-gradient(top, white 0%, #f6f6f6 47%, #ededed 100%);
@@ -1940,7 +1940,7 @@ button:hover {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=0 );
 }
 
-/* line 1869, ../sass/screen.scss */
+/* line 1868, ../sass/screen.scss */
 .container-color-5 {
   background-image: -webkit-linear-gradient(top, #fcf8e3 0, #f8efc0 100%);
   background-image: -o-linear-gradient(top, #fcf8e3 0, #f8efc0 100%);
@@ -1950,7 +1950,7 @@ button:hover {
   background-repeat: repeat-x;
 }
 
-/* line 1877, ../sass/screen.scss */
+/* line 1876, ../sass/screen.scss */
 .container-color-6 {
   background: #93cede;
   background: -moz-linear-gradient(top, #93cede 0%, #75bdd1 41%, #49a5bf 100%);
@@ -1962,7 +1962,7 @@ button:hover {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#93cede', endColorstr='#49a5bf', GradientType=0 );
 }
 
-/* line 1889, ../sass/screen.scss */
+/* line 1888, ../sass/screen.scss */
 .btn {
   width: 100%;
   font-family: 'Oswald', sans-serif;
@@ -1993,7 +1993,7 @@ button:hover {
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
 }
 @media (min-width: 800px) {
-  /* line 1889, ../sass/screen.scss */
+  /* line 1888, ../sass/screen.scss */
   .btn {
     width: 50px;
     border-radius: 5px;
@@ -2002,7 +2002,7 @@ button:hover {
   }
 }
 
-/* line 1926, ../sass/screen.scss */
+/* line 1925, ../sass/screen.scss */
 .btn:hover {
   color: white;
   cursor: pointer;
@@ -2019,61 +2019,61 @@ button:hover {
   /* IE6-9 */
 }
 
-/* line 1953, ../sass/screen.scss */
+/* line 1952, ../sass/screen.scss */
 .noticia-detalle {
   padding: 15px 15px 0 0;
 }
 
-/* line 1959, ../sass/screen.scss */
+/* line 1958, ../sass/screen.scss */
 .container-comentario {
   display: flex;
   flex-direction: column;
 }
 
-/* line 1963, ../sass/screen.scss */
+/* line 1962, ../sass/screen.scss */
 .container-comentarios {
   margin-top: 15px;
 }
 
-/* line 1966, ../sass/screen.scss */
+/* line 1965, ../sass/screen.scss */
 .hacemos-container {
   overflow: auto;
   height: 280px;
   overflow-y: hidden;
 }
 
-/* line 1972, ../sass/screen.scss */
+/* line 1971, ../sass/screen.scss */
 .mision-container p {
   color: white;
 }
 
-/* line 1979, ../sass/screen.scss */
+/* line 1978, ../sass/screen.scss */
 .slider-container-1 {
   margin: 0 20px 100px;
 }
 @media (min-width: 800px) {
-  /* line 1979, ../sass/screen.scss */
+  /* line 1978, ../sass/screen.scss */
   .slider-container-1 {
     margin: 0 18%;
   }
 }
 
-/* line 1986, ../sass/screen.scss */
+/* line 1985, ../sass/screen.scss */
 .slider-container-2 {
   min-height: 270px;
 }
 
-/* line 1989, ../sass/screen.scss */
+/* line 1988, ../sass/screen.scss */
 .slider-selected {
   display: inline !important;
 }
 
-/* line 1992, ../sass/screen.scss */
+/* line 1991, ../sass/screen.scss */
 .slider-container {
   display: none;
 }
 
-/* line 1995, ../sass/screen.scss */
+/* line 1994, ../sass/screen.scss */
 .slider-alto {
   min-height: 320px;
   font-family: 'Oswald', sans-serif;
@@ -2089,7 +2089,7 @@ button:hover {
   animation-duration: 1.5s;
 }
 
-/* line 2009, ../sass/screen.scss */
+/* line 2008, ../sass/screen.scss */
 select {
   border: solid 0px;
   border-bottom-width: 1px;
@@ -2107,7 +2107,7 @@ select {
   animation-duration: 3s;
 }
 
-/* line 2025, ../sass/screen.scss */
+/* line 2024, ../sass/screen.scss */
 .select-control {
   height: 30px;
   font-size: 14px;
@@ -2119,40 +2119,40 @@ select {
   transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
 
-/* line 2037, ../sass/screen.scss */
+/* line 2036, ../sass/screen.scss */
 select option {
   background-color: #fff;
 }
 
-/* line 2040, ../sass/screen.scss */
+/* line 2039, ../sass/screen.scss */
 .container-row {
   display: flex;
   flex-direction: column;
 }
 @media (min-width: 800px) {
-  /* line 2040, ../sass/screen.scss */
+  /* line 2039, ../sass/screen.scss */
   .container-row {
     flex-direction: row;
   }
 }
 
-/* line 2048, ../sass/screen.scss */
+/* line 2047, ../sass/screen.scss */
 .container-colum {
   margin: 15px;
 }
 
-/* line 2051, ../sass/screen.scss */
+/* line 2050, ../sass/screen.scss */
 .float-right {
   float: right;
 }
 
-/* line 2054, ../sass/screen.scss */
+/* line 2053, ../sass/screen.scss */
 .box-row {
   display: flex;
   flex-direction: row;
 }
 
-/* line 2058, ../sass/screen.scss */
+/* line 2057, ../sass/screen.scss */
 input[type="radio"] {
   border-radius: 25px;
   box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.5), inset 0 0 10px rgba(0, 0, 0, 0.5), 0 0 0 1px rgba(0, 0, 0, 0.1), 0 -1px 2px 1px rgba(0, 0, 0, 0.25), 0 2px 2px 1px rgba(255, 255, 255, 0.5), 0 -2px 10px 2px rgba(255, 255, 255, 0.75), 0 2px 10px 2px rgba(0, 0, 0, 0.25);
@@ -2167,19 +2167,19 @@ input[type="radio"] {
   -webkit-transition: .15s;
 }
 
-/* line 2078, ../sass/screen.scss */
+/* line 2077, ../sass/screen.scss */
 input[type="radio"]:checked {
   background-color: #6cf;
 }
 
-/* line 2088, ../sass/screen.scss */
+/* line 2087, ../sass/screen.scss */
 .video-screen {
   width: 100%;
   height: 100%;
   overflow: hidden;
 }
 @media (max-width: 800px) {
-  /* line 2088, ../sass/screen.scss */
+  /* line 2087, ../sass/screen.scss */
   .video-screen {
     width: 92%;
     margin: 0 auto;
@@ -2187,7 +2187,7 @@ input[type="radio"]:checked {
   }
 }
 
-/* line 2100, ../sass/screen.scss */
+/* line 2099, ../sass/screen.scss */
 #cotizador-form h3 {
   margin-top: 20px;
   opacity: 0;
@@ -2204,7 +2204,7 @@ input[type="radio"]:checked {
   animation-duration: 3s;
 }
 
-/* line 2122, ../sass/screen.scss */
+/* line 2121, ../sass/screen.scss */
 div[title]:hover:after {
   content: attr(title);
   padding: 4px 8px;
@@ -2225,7 +2225,7 @@ div[title]:hover:after {
   background-image: -o-linear-gradient(top, #eeeeee, #cccccc);
 }
 
-/* line 2145, ../sass/screen.scss */
+/* line 2144, ../sass/screen.scss */
 .btn-movie {
   font-family: 'Oswald', sans-serif;
   position: absolute;
@@ -2243,19 +2243,19 @@ div[title]:hover:after {
   z-index: 1;
 }
 @media (min-width: 800px) {
-  /* line 2145, ../sass/screen.scss */
+  /* line 2144, ../sass/screen.scss */
   .btn-movie {
     left: 42%;
     top: 40%;
   }
 }
 
-/* line 2165, ../sass/screen.scss */
+/* line 2164, ../sass/screen.scss */
 .btn-movie:hover {
   color: #000;
 }
 
-/* line 2168, ../sass/screen.scss */
+/* line 2167, ../sass/screen.scss */
 .send-mail {
   position: fixed;
   height: 100px;
@@ -2264,19 +2264,19 @@ div[title]:hover:after {
   left: calc(50% - 125px);
 }
 
-/* line 2175, ../sass/screen.scss */
+/* line 2174, ../sass/screen.scss */
 .tu-comentario {
   height: 109px;
 }
 
-/* line 2178, ../sass/screen.scss */
+/* line 2177, ../sass/screen.scss */
 .back-2 {
   width: 200px;
   margin: 5% calc(50% - 100px);
   text-align: center;
 }
 
-/* line 2183, ../sass/screen.scss */
+/* line 2182, ../sass/screen.scss */
 .back-3 {
   width: 100%;
   display: flex;
@@ -2284,13 +2284,13 @@ div[title]:hover:after {
   align-items: center;
 }
 @media (min-width: 800px) {
-  /* line 2183, ../sass/screen.scss */
+  /* line 2182, ../sass/screen.scss */
   .back-3 {
     align-items: flex-end;
   }
 }
 
-/* line 2192, ../sass/screen.scss */
+/* line 2191, ../sass/screen.scss */
 .arrow-up {
   width: 0;
   height: 0;
@@ -2303,13 +2303,13 @@ div[title]:hover:after {
   /****/
 }
 
-/* line 2201, ../sass/screen.scss */
+/* line 2200, ../sass/screen.scss */
 .position-up {
   margin-top: -20px;
   position: absolute;
 }
 
-/* line 2205, ../sass/screen.scss */
+/* line 2204, ../sass/screen.scss */
 .arrow-left {
   margin-right: 5px;
   height: 0px;
@@ -2322,7 +2322,7 @@ div[title]:hover:after {
   /****/
 }
 
-/* line 2215, ../sass/screen.scss */
+/* line 2214, ../sass/screen.scss */
 a:hover .arrow-left {
   margin-right: 5px;
   border-right: 15px solid darkorange;
@@ -2343,7 +2343,7 @@ a:hover .arrow-left {
   -webkit-transform: translate(-1em, 0);
   -o-transform: translate(-1em, 0);
 }
-/* line 2236, ../sass/screen.scss */
+/* line 2235, ../sass/screen.scss */
 a:hover .arrow-up {
   border-bottom: 15px solid darkorange;
   -webkit-transition: all .3s;
@@ -2364,7 +2364,7 @@ a:hover .arrow-up {
   -o-transform: translate(0, -1em);
 }
 
-/* line 2258, ../sass/screen.scss */
+/* line 2257, ../sass/screen.scss */
 button:hover .arrow-left {
   margin-right: 5px;
   border-right: 15px solid darkorange;
@@ -2385,7 +2385,7 @@ button:hover .arrow-left {
   -webkit-transform: translate(-1em, 0);
   -o-transform: translate(-1em, 0);
 }
-/* line 2279, ../sass/screen.scss */
+/* line 2278, ../sass/screen.scss */
 button:hover .arrow-up {
   border-bottom: 15px solid darkorange;
   -webkit-transition: all .3s;
@@ -2406,17 +2406,23 @@ button:hover .arrow-up {
   -o-transform: translate(0, -1em);
 }
 
-/* line 2300, ../sass/screen.scss */
+/* line 2299, ../sass/screen.scss */
 #chat-login, #enviar-consulta, #enviar-cotizacion {
   margin-top: 50px;
 }
 
-/* line 2303, ../sass/screen.scss */
+/* line 2302, ../sass/screen.scss */
 .form-control[disabled], fieldset[disabled] .form-control {
   cursor: not-allowed;
 }
 
-/* line 2306, ../sass/screen.scss */
+/* line 2305, ../sass/screen.scss */
 .form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control {
   opacity: 1;
+}
+
+/* line 2309, ../sass/screen.scss */
+.noticia-fecha {
+  font-size: 14px;
+  font-weight: bold;
 }
