--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -2321,6 +2321,53 @@ button:hover{
   @media (min-width: 800px) {
     width: 60%;
     margin-left: 25%;
+
     margin-top: 15px;
   }
+}
+h2 {
+  display: block;
+  font-size: 1.5em;
+  -webkit-margin-before: 0.83em;
+  -webkit-margin-after: 0.83em;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+  font-weight: bold;
+}
+.chat-cliente, .chat-ac{
+  display: flex;
+  margin-top: 10px;
+}
+.chat-cliente > div > p {
+  font-size: 0.8em;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 5px 10px;
+  border: 2px solid darkgray;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  -moz-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+}
+.chat-ac > div > p {
+  background-color: #eee;
+  font-size: 0.8em;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 5px 10px;
+  border: 2px solid darkgray;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  -moz-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+}
+.chat-hora{
+  font-size: 0.6em;
+  font-weight: bold;
+  margin-left: 15px;
+  margin-top: 5px;
 }
