--- a/app/stylesheets/screen.css
+++ b/app/stylesheets/screen.css
@@ -2446,3 +2446,59 @@ button:hover .arrow-up {
     margin-top: 15px;
   }
 }
+
+/* line 2328, ../sass/screen.scss */
+h2 {
+  display: block;
+  font-size: 1.5em;
+  -webkit-margin-before: 0.83em;
+  -webkit-margin-after: 0.83em;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
+  font-weight: bold;
+}
+
+/* line 2337, ../sass/screen.scss */
+.chat-cliente, .chat-ac {
+  display: flex;
+  margin-top: 10px;
+}
+
+/* line 2341, ../sass/screen.scss */
+.chat-cliente > div > p {
+  font-size: 0.8em;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 5px 10px;
+  border: 2px solid darkgray;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  -moz-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+}
+
+/* line 2354, ../sass/screen.scss */
+.chat-ac > div > p {
+  background-color: #eee;
+  font-size: 0.8em;
+  margin-left: 10px;
+  margin-right: 10px;
+  padding: 5px 10px;
+  border: 2px solid darkgray;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  -moz-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+}
+
+/* line 2368, ../sass/screen.scss */
+.chat-hora {
+  font-size: 0.6em;
+  font-weight: bold;
+  margin-left: 15px;
+  margin-top: 5px;
+}
