--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -1047,9 +1047,10 @@ label {
   width: 100%;
   height: 30px;
   //padding: 6px 12px;
-  font-size: 14px;
+  font-size: 15px;
+  font-family: 'Oswald', sans-serif;
   line-height: 1.42857143;
-  color: #555;
+  color: black;
   //background-color: #fff;
   background-image: none;
   //-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
@@ -1793,6 +1794,9 @@ button:hover{
 #texto-mensaje {
   //width: 60%;
   //margin-left: 25%;
+  font-family: 'Oswald', sans-serif;
+  color: white;
+  font-size: 16px;
   margin-right: 10px;
   margin-top: 15px;
   @media (min-width: 800px) {
@@ -2327,7 +2331,7 @@ button:hover{
 }
 h2 {
   display: block;
-  font-size: 1.5em;
+  font-size: 1.2em;
   -webkit-margin-before: 0.83em;
   -webkit-margin-after: 0.83em;
   -webkit-margin-start: 0px;
@@ -2339,34 +2343,39 @@ h2 {
   margin-top: 10px;
 }
 .chat-cliente > div > p {
-  font-size: 0.8em;
+  font-size: 1.2em;
+  font-family: 'Oswald', sans-serif;
+  color: white;
   margin-left: 10px;
   margin-right: 10px;
   padding: 5px 10px;
-  border: 2px solid darkgray;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  border-radius: 10px;
-  -webkit-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
-  -moz-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
-  box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  //border: 2px solid darkgray;
+  //-webkit-border-radius: 10px;
+  //-moz-border-radius: 10px;
+  //border-radius: 10px;
+  //-webkit-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  //-moz-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  //box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
 }
 .chat-ac > div > p {
-  background-color: #eee;
-  font-size: 0.8em;
+
+  //background-color: #eee;
+  font-family: 'Oswald', sans-serif;
+  color: black;
+  font-size: 1.2em;
   margin-left: 10px;
   margin-right: 10px;
   padding: 5px 10px;
-  border: 2px solid darkgray;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  border-radius: 10px;
-  -webkit-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
-  -moz-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
-  box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  //border: 2px solid darkgray;
+  //-webkit-border-radius: 10px;
+  //-moz-border-radius: 10px;
+  //border-radius: 10px;
+  //-webkit-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  //-moz-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  //box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
 }
 .chat-hora{
-  font-size: 0.6em;
+  font-size: 0.8em;
   font-weight: bold;
   margin-left: 15px;
   margin-top: 5px;
