--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -2146,28 +2146,56 @@ div[title]:hover:after {
 }
 
 .btn-movie{
+  //position: absolute;
+  //background-color: #fff;
+  //padding: 15px;
+  //left: 35%;
+  //top:35%;
+  //border: 3px solid darkgray;
+  //-webkit-border-radius: 20px;
+  //-moz-border-radius: 20px;
+  //border-radius: 20px;
+  //-webkit-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  //-moz-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  //box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
+  //z-index: 1;
+  background: #ECECEC;
+  border-radius: 15px;
+  padding: 10px 20px;
+  display: flex;
   font-family: 'Oswald', sans-serif;
-  position: absolute;
-  background-color: #fff;
-  padding: 15px;
-  left: 35%;
-  top:35%;
-  border: 3px solid darkgray;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  border-radius: 20px;
-  -webkit-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
-  -moz-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
-  box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
-  z-index: 1;
-  @media (min-width: 800px) {
-    left: 42%;
-    top:40%;
-  }
+  font-weight: bold;
+  color:#7f7f7f;
+  text-decoration: none;
+  text-shadow:0px 1px 0px #fff;
+  border:1px solid #a7a7a7;
+  width: 116px;
+  margin:0px auto;
+  margin-top:100px;
+  //margin: auto;
+  box-shadow: 0px 2px 1px white inset, 0px -2px 8px white, 0px 2px 5px rgba(0, 0, 0, 0.1), 0px 8px 10px rgba(0, 0, 0, 0.1);
+  -webkit-transition:box-shadow 0.5s;
+}
+ .btn-movie{
+  float: right;
+  //margin-top: 2px;
 }
 .btn-movie:hover{
-  color: #000;
+  box-shadow: 0px 2px 1px white inset, 0px -2px 20px white, 0px 2px 5px rgba(0, 0, 0, 0.1), 0px 8px 10px rgba(0, 0, 0, 0.1);
 }
+ .btn-movie:active{
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5) inset, 0px -2px 20px white, 0px 1px 5px rgba(0, 0, 0, 0.1), 0px 2px 10px rgba(0, 0, 0, 0.1);
+  background:-webkit-linear-gradient(top, #d1d1d1 0%,#ECECEC 100%);
+}
+
+  //@media (min-width: 800px) {
+    //left: 42%;
+    //top:40%;
+  //}
+//}
+//.btn-movie:hover{
+  //color: #000;
+//}
 .send-mail{
   position: fixed;
   height: 100px;
