--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -2149,45 +2149,77 @@ div[title]:hover:after {
   //position: absolute;
   //background-color: #fff;
   //padding: 15px;
-  //left: 35%;
-  //top:35%;
+  left: 42%;
+  top:42%;
   //border: 3px solid darkgray;
   //-webkit-border-radius: 20px;
   //-moz-border-radius: 20px;
-  //border-radius: 20px;
   //-webkit-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
   //-moz-box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
   //box-shadow: 0px 4px 5px 0px rgba(0, 0, 0, 0.29);
-  //z-index: 1;
-  background: #ECECEC;
-  border-radius: 15px;
-  padding: 10px 20px;
-  display: flex;
+  z-index: 1;
+  position: absolute;
+  display: block;
+  margin: 0 auto;
+  padding: 1em 1em;
+  max-width: 10em;
+  color: black;
+  font-size: .9em;
+  line-height: 1;
   font-family: 'Oswald', sans-serif;
-  font-weight: bold;
-  color:#7f7f7f;
+  //font-weight: lighter;
+  text-align: center;
   text-decoration: none;
-  text-shadow:0px 1px 0px #fff;
-  border:1px solid #a7a7a7;
-  width: 116px;
-  margin:0px auto;
-  margin-top:100px;
-  //margin: auto;
-  box-shadow: 0px 2px 1px white inset, 0px -2px 8px white, 0px 2px 5px rgba(0, 0, 0, 0.1), 0px 8px 10px rgba(0, 0, 0, 0.1);
-  -webkit-transition:box-shadow 0.5s;
-}
- .btn-movie{
-  float: right;
-  //margin-top: 2px;
-}
-.btn-movie:hover{
-  box-shadow: 0px 2px 1px white inset, 0px -2px 20px white, 0px 2px 5px rgba(0, 0, 0, 0.1), 0px 8px 10px rgba(0, 0, 0, 0.1);
-}
- .btn-movie:active{
-  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5) inset, 0px -2px 20px white, 0px 1px 5px rgba(0, 0, 0, 0.1), 0px 2px 10px rgba(0, 0, 0, 0.1);
-  background:-webkit-linear-gradient(top, #d1d1d1 0%,#ECECEC 100%);
-}
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#eeeeee+0,eeeeee+100;Grey+Flat */
+  background: rgb(238,238,238); /* Old browsers */
+  background: -moz-linear-gradient(top,  rgba(238,238,238,1) 0%, rgba(238,238,238,1) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top,  rgba(238,238,238,1) 0%,rgba(238,238,238,1) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom,  rgba(238,238,238,1) 0%,rgba(238,238,238,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#eeeeee',GradientType=0 ); /* IE6-9 */
+  border: 1px solid white;
+  border-radius: 8px;
+  box-shadow: inset 0 0 7px 0 rgba(white, 0.5);
+      &:before {
+        //height: 1px;
+        background: rgba(white, 0.4);
+      }
+      &:after {
+        //height: 100%;
+        //border-radius: 3px;
+        box-shadow: 0 2px 5px 0 rgba(black, 0.3);
+      }
+  &:hover, &:focus {
+    text-decoration: none;
+    outline: none;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ff7400+0,ff7400+100;Orange+Flat */
+    background: rgb(255,116,0); /* Old browsers */
+    background: -moz-linear-gradient(top,  rgba(255,116,0,1) 0%, rgba(255,116,0,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  rgba(255,116,0,1) 0%,rgba(255,116,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  rgba(255,116,0,1) 0%,rgba(255,116,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff7400', endColorstr='#ff7400',GradientType=0 ); /* IE6-9 */
+    -webkit-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    -ms-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    transition: all 0.4s;
 
+
+  }
+  &:focus {
+    background: rgb(238,238,238); /* Old browsers */
+    background: -moz-linear-gradient(top,  rgba(238,238,238,1) 0%, rgba(238,238,238,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  rgba(238,238,238,1) 0%,rgba(238,238,238,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  rgba(238,238,238,1) 0%,rgba(238,238,238,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#eeeeee',GradientType=0 ); /* IE6-9 */
+    border: 1px solid white;
+  }
+  &:active {
+    //top: 1px;
+    &:after {
+      box-shadow: 0 1px 5px 0 rgba(black, 0.3);
+    }
+  }
+}
   //@media (min-width: 800px) {
     //left: 42%;
     //top:40%;
