--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -2161,24 +2161,19 @@ div[title]:hover:after {
   position: absolute;
   display: block;
   margin: 0 auto;
-  padding: 1em 1em;
+  padding: .9em .9em;
   max-width: 10em;
   color: black;
   font-size: .9em;
   line-height: 1;
-  font-family: 'Oswald', sans-serif;
+  font-family: Roboto;
   //font-weight: lighter;
   text-align: center;
   text-decoration: none;
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#eeeeee+0,eeeeee+100;Grey+Flat */
-  background: rgb(238,238,238); /* Old browsers */
-  background: -moz-linear-gradient(top,  rgba(238,238,238,1) 0%, rgba(238,238,238,1) 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top,  rgba(238,238,238,1) 0%,rgba(238,238,238,1) 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom,  rgba(238,238,238,1) 0%,rgba(238,238,238,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#eeeeee',GradientType=0 ); /* IE6-9 */
-  border: 1px solid white;
+  background-color: transparent;
+  //border: 1px solid black;
   border-radius: 8px;
-  box-shadow: inset 0 0 7px 0 rgba(white, 0.5);
+  box-shadow: inset 0 0 7px 0 rgba(black, 0.8);
       &:before {
         //height: 1px;
         background: rgba(white, 0.4);
@@ -2191,12 +2186,24 @@ div[title]:hover:after {
   &:hover, &:focus {
     text-decoration: none;
     outline: none;
-    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ff7400+0,ff7400+100;Orange+Flat */
-    background: rgb(255,116,0); /* Old browsers */
-    background: -moz-linear-gradient(top,  rgba(255,116,0,1) 0%, rgba(255,116,0,1) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top,  rgba(255,116,0,1) 0%,rgba(255,116,0,1) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom,  rgba(255,116,0,1) 0%,rgba(255,116,0,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff7400', endColorstr='#ff7400',GradientType=0 ); /* IE6-9 */
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffa84c+0,ff7b0d+100;Orange+3D */
+    background: rgb(255,168,76); /* Old browsers */
+    background: -moz-linear-gradient(top,  rgba(255,168,76,1) 0%, rgba(255,123,13,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  rgba(255,168,76,1) 0%,rgba(255,123,13,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  rgba(255,168,76,1) 0%,rgba(255,123,13,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffa84c', endColorstr='#ff7b0d',GradientType=0 ); /* IE6-9 */
+    color: white;
+    border: 1px solid white;
+    box-shadow:inset 0 0 7px 0 rgba(white, 0.8);
+    &:before {
+      //height: 1px;
+      background: rgba(white, 0.6);
+    }
+    &:after {
+      //height: 100%;
+      //border-radius: 3px;
+      box-shadow: 0 2px 5px 0 rgba(black, 0.5);
+    }
     -webkit-transition: all 0.4s;
     -moz-transition: all 0.4s;
     -ms-transition: all 0.4s;
@@ -2206,12 +2213,14 @@ div[title]:hover:after {
 
   }
   &:focus {
-    background: rgb(238,238,238); /* Old browsers */
-    background: -moz-linear-gradient(top,  rgba(238,238,238,1) 0%, rgba(238,238,238,1) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top,  rgba(238,238,238,1) 0%,rgba(238,238,238,1) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom,  rgba(238,238,238,1) 0%,rgba(238,238,238,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#eeeeee',GradientType=0 ); /* IE6-9 */
+    background-color: transparent;
     border: 1px solid white;
+    -webkit-transition: all 0.4s;
+    -moz-transition: all 0.4s;
+    -ms-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    transition: all 0.4s;
+
   }
   &:active {
     //top: 1px;
