Se cambio el volver por inicio y el link correspondiente

--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -135,7 +135,8 @@ html {
 
 .texto-main2{
   max-width: 1000px;
-  text-align: left;
+  //text-align: left;
+  text-align: center;
   font-family: 'Oswald', sans-serif;
   font-size: 22px;
   color: black;
